  * cv2pdb: updated to 0.33 with better DWARF location support

2015-05-16 Version 0.3.41

  * mago:
    - module list now shows x64 addresses correctly
    - verboser output for DLL load/unload
    - implement "set next statement"
    - callstack: parameter list also showed locals
    - disassembly: show symbols, address labels
    - fix dstring display
    - can list associative array members (needs 
      https://github.com/D-Programming-Language/dmd/pull/4473 for Win64)
    - show exception number for Win32 exceptions
    - can now load PDB symbols from Microsoft Symbol Server or local 
      cache folders
    - now support lexical scope blocks (helps C++ and D with
      https://github.com/D-Programming-Language/dmd/pull/2867)
  * cv2pdb:
    - improvements for DWARF conversion
  * dparser updated to cf26dbe426b10957f6364313cc7121e41083bebe with support for new 
    language features in dmd 2.067 and fixing a number of exceptions
  * some initial support for finding symbol references
  * new linker option "build and use local phobos library" to get a COFF32 version (dmd 2.067+)
    or add missing debug info (dmd 2.065+)
  * renaming project configuration did not change respective config on all platforms 
  * workaround for link response file with spaces, but disabled short names on NTFS volume
  * profiler window: non-D symbols (e.g. C++ mangled functions) are no longer displayed empty
  * new command "Compile and Disassemble" to show the disassembly of the current file in
    the code context window that is automatically synchronized with editor movements

unreleased Version 0.3.42

  * added new command "DustMite Build Failure" to reduce source of startup project
    for build error with DustMite
  * update "Build Phobos Browse Info" and "Build local version of phobos" for dmd 2.067+
  * cv2pdb: 
    - last version introduced crashes with DWARF conversions
    - DWARF debug info now stripped from executable
    - support for mspdb140.dll from VS2015