@@ -34,34 +34,34 @@
 	<useInline>1</useInline>
     <outdir>$(ConfigurationName) $(PlatformName)</outdir> 
   </Config>
-  <Config name="Debug GDC" platform="Win32">
+  <Config name="Debug LDC" platform="Win32">
 	<isX86_64>0</isX86_64>
-	<compiler>1</compiler>
+	<compiler>2</compiler>
 	<runCv2pdb>1</runCv2pdb>
 	<symdebug>1</symdebug>
 	<release>0</release>
     <outdir>$(ConfigurationName) $(PlatformName)</outdir> 
   </Config>
-  <Config name="Release GDC" platform="Win32">
+  <Config name="Release LDC" platform="Win32">
 	<isX86_64>0</isX86_64>
-	<compiler>1</compiler>
+	<compiler>2</compiler>
 	<runCv2pdb>0</runCv2pdb>
 	<release>1</release>
 	<optimize>1</optimize>
 	<useInline>1</useInline>
     <outdir>$(ConfigurationName) $(PlatformName)</outdir> 
   </Config>
-  <Config name="Debug GDC" platform="x64">
+  <Config name="Debug LDC" platform="x64">
 	<isX86_64>1</isX86_64>
-	<compiler>1</compiler>
+	<compiler>2</compiler>
     <outdir>$(ConfigurationName) $(PlatformName)</outdir> 
 	<runCv2pdb>1</runCv2pdb>
 	<symdebug>1</symdebug>
 	<release>0</release>
   </Config>
-  <Config name="Release GDC" platform="x64">
+  <Config name="Release LDC" platform="x64">
 	<isX86_64>1</isX86_64>
-	<compiler>1</compiler>
+	<compiler>2</compiler>
 	<runCv2pdb>0</runCv2pdb>
 	<release>1</release>
 	<optimize>1</optimize>
